--- a/views/blogIndex.ejs
+++ b/views/blogIndex.ejs
@@ -10,8 +10,8 @@
 		<ul>
 		<% for (const post of posts) {%>
 			<li>
-				<h2><%= post.title %></h2>
-				<p><%= post.body.slice(100) %></p>
+				<a href="<%= post.url %>"><h2><%= post.title %></h2></a>
+				<p><%= post.body.slice(0, 200) + '...' %></p>
 				<p><%= new Date(post.date) %></p>
 			</li>
 		<% }%>
