--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-	<p>Hello world!</p>
+    <h1>This is my website.</h1>
+	<p>For now there is only my <a href="/blog">blog</a>.</p>
   </body>
 </html>
