--- a/views/admin/loginForm.ejs
+++ b/views/admin/loginForm.ejs
@@ -6,16 +6,17 @@
   </head>
   <body>
     <h1>Log In</h1>
-	<form action="/admin/log-in" method='POST'>
+	<form action='/admin/log-in' method='POST'>
 		<label>
 			<p>Email:</p>
-			<input type="email" required>
+			<input type="email" name='email' required>
 		</label>
 		<label>
 			<p>Password:</p>
-			<input type="password" required>
+			<input type="password" name='password' required>
 		</label>
 		<button>Log In</button>
 	</form>
+
   </body>
 </html>
