Add Breadcrumbs; closes#23

--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -5,6 +5,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+     <ol class='breadcrumbs-list'>
+      <li>
+        <a href="/">home</a>
+		/
+      </li>
+      <li>
+        <a href="/blog">blog</a>
+		/
+      </li>
+    </ol>
+
 	  <h1><%= post.title %></h1>
 	  <%- post.body %>
   </body>
