Style breadcrumbs; closes#24

--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= post.title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/post.css' />
   </head>
   <body>
      <ol class='breadcrumbs-list'>
