Add article tag to blog posts

--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -17,7 +17,9 @@
       </li>
     </ol>
 
-	  <h1><%= post.title %></h1>
-	  <%- post.body %>
+	<article>
+		<h1><%= post.title %></h1>
+		<%- post.body %>
+	</article>
   </body>
 </html>
