--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+ul, ol {
+	list-style: none;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
