--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,6 @@
 
+@import 'header.css';
+
 * {
 	padding: 0;
 	margin: 0;
@@ -7,6 +9,13 @@
 
 ul, ol {
 	list-style: none;
+}
+
+img, svg {
+	max-width: 100%;
+	max-height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 body {
@@ -18,3 +27,4 @@ body {
 a {
   color: #00B7FF;
 }
+
