--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 			<div id="my-picture">
 				<img src="https://avatars.githubusercontent.com/u/51179753?v=4" alt="eleswastaken github profile picture">
 			</div>
-			<h1>Hi, I'm Eles.<br>I'm a Software Developer</h1>
+			<h1>Hi, I'm Eles.<br>I'm a Software Developer.</h1>
 		</section>
 
 		<section class="recent">
