--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,3 +45,10 @@ a {
 	overflow: hidden;
 	margin-bottom: 25px;
 }
+
+.recent {
+	background: #110C17;
+	text-align: center;
+	color: #fff;
+	padding: 50px;
+}
