--- a/views/blogIndex.ejs
+++ b/views/blogIndex.ejs
@@ -5,19 +5,22 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+	  <%- include('header.ejs') %>
 	<% if (posts.length) {%>
-	<h1>Posts</h1>
-		<ul>
-		<% for (const post of posts) {%>
-			<li>
-				<a href="<%= post.url %>"><h2><%= post.title %></h2></a>
-				<p><%= post.body.slice(0, 200) + '...' %></p>
-				<p><%= new Date(post.date) %></p>
-			</li>
-		<% }%>
-		</ul>
-	<% } else { %>
-	<h1>There is nothing yet!</h1>
+	<main>
+		<h1>Blog Posts</h1>
+			<ul>
+			<% for (const post of posts) {%>
+				<li>
+					<a href="<%= post.url %>"><h2><%= post.title %></h2></a>
+					<p><%= post.preview ? post.preview : post.body.slice(0, 100) + '...' %></p>
+					<p><%= new Date(post.date).toLocaleDateString("en-US", { year: 'numeric', month: 'long', day: 'numeric' }) %></p>
+				</li>
+			<% }%>
+			</ul>
+		<% } else { %>
+		<h1>There is nothing yet!</h1>
+	</main>
 	<% } %>
   </body>
 </html>
