Add subtitle; close #34

--- a/views/admin/postForm.ejs
+++ b/views/admin/postForm.ejs
@@ -12,6 +12,10 @@
 			<input type="text" name='title' required>
 		</label>
 		<label>
+			<p>Subtitle:</p>
+			<input type="text" name='subtitle' required>
+		</label>
+		<label>
 			<p>Log Body:</p>
 			<textarea  name="body" cols="90" rows="10"></textarea>
 		</label>
