--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Admin Dashboard</h1>
-	<p><a href="/admin/post">Create new log</a></p>
+	<p><a href="/admin/blog-post">Create new blog post</a></p>
+	<p><a href="/admin/log-post">Create new log post</a></p>
 	<p><a href="/admin/log-out">Log Out</a></p>
   </body>
 </html>
